# FastAPI

./: database.db  pyproject.toml
fast_api/: app.py  schemas.py
migrations/: env.py
migrations/versions/: b5955e7067dd_create_users_table.py
