[tool.poetry]
name = "fast-api"
version = "0.1.0"
description = ""
authors = ["Mayumi <cinthya.m.kuniyoshi@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.*"
fastapi = {extras = ["standard"], version = "^0.115.4"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
